Before install slick-slider

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,9 +19,12 @@ header.header{
 	background-color: #aaa;
 }
 
+.logo-img{
 
+	width: 20rem;
+}
 
-ul.mandarin-menu{ 
+ul.mandarinart-menu{ 
 
 	width: 100%;
 
