--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,19 +43,19 @@ ul.mandarinart-menu{
 
 	margin: 0;
 
-	li:hover{
+	li:hover {
 
 		color: white;
 		background-color: red;
 	}
 
-	li{
+	li {
 		padding: 1rem;
 		list-style-type: none;
 	}
 }
 
-#slick1 {
+#slick1, #slick2 {
 
 	width: 100%;
 
@@ -67,5 +67,19 @@ ul.mandarinart-menu{
 	.item{
 
 		background-color: #fff;
+	}
+}
+
+#slick3 {
+
+	width: 100%;
+}
+
+
+[id*="section"]{
+
+	h3, h4, h5{
+
+		width: 100%;
 	}
 }
