--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,15 +1,8 @@
 
+@import "~bootstrap/scss/bootstrap";
 
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-@import "~bootstrap/scss/root";
-@import "~bootstrap/scss/reboot";
-@import "~bootstrap/scss/grid";
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i');
 
-* {
-	outline: 1px solid red;
-}
 
 .development{
 
@@ -19,40 +12,407 @@
 	margin: auto;
 }
 
-header.header{
-	background-color: #aaa;
+
+* {
+	//outline: 1px solid red;
+	font-family: 'Roboto', sans-serif;
 }
 
-.logo-img{
+body {
 
-	width: 20rem;
+	background-color: #D0DCE8;
+	// padding-top: 7.8rem;
 }
+
+
+$break-point-sm : 576px;
+$break-point-md : 768px;
+$break-point-lg : 992px;
+$break-point-xl : 1200px;
+
+$menu-hover : red;
+
+.header-wrapper{
+
+	background-color: black;
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 10000;
+}
+
+ header.header {
+
+	background-color: black;
+	position: relative;
+ }
+
+ header.header {
+
+ 	.logo-block, 
+ 	.info-block,
+ 	.slogan-block,
+ 	.mandarinart-menu{
+		position: absolute;
+ 	}
+
+ 	.logo-block{
+ 		.logo-img{
+			width: 95%;
+		}
+	}
+
+	color: #fff;
+	
+	@media (min-width: $break-point-sm){
+
+    	height: 5rem;
+
+    	.slogan-block{
+
+    		display: none;
+			
+	 		top: 3.5rem;
+	 		left: 66.8%;
+	 		width: 33.2%;
+	 		height: 4.3rem;
+
+
+	 		&:before{
+				content: "\00ab";
+				position: absolute;
+				font-size: 1.8rem;
+				bottom: 1rem;
+			}
+			
+			p{
+				position: absolute;
+				bottom: 0;
+				margin: 0;
+				padding-bottom: .35rem;
+				padding-left: 1.1rem;
+				font-size: .8rem;
+
+
+			}
+    	}
+
+    	.info-block{
+    		padding-top: .7rem;
+	 		top: 0;
+	 		left: 0;
+	 		width: 80%;
+	 		font-size: .8rem;
+	 		p{
+				margin-bottom: .2rem;
+	 		}
+
+    	}
+
+
+	 	.logo-block{
+	 		top: 1.9rem;
+	 		left: 33.4%;
+	 		width: 50%;
+	 	}
+
+	 	.mandarinart-menu{
+
+	 		top: 0;
+	 		left: 33.4%;
+	 		width: 66.55%;
+			font-size: 1rem;
+	 	}
+
+		
+    }
+
+	
+	@media (min-width: $break-point-md){
+	
+    	height: 4.8rem;
+
+    	.slogan-block{
+			
+			display: none;
+	 		top: 3.5rem;
+	 		left: 66.8%;
+	 		width: 33.2%;
+	 		height: 4.3rem;
+
+	 		&:before{
+				content: "\00ab";
+				position: absolute;
+				font-size: 1.8rem;
+				bottom: 1rem;
+			}
+			
+			p{
+				position: absolute;
+				bottom: 0;
+				margin: 0;
+				padding-bottom: .35rem;
+				padding-left: 1.1rem;
+				font-size: .8rem;
+			}
+    	}
+
+    	.info-block{
+    		padding-top: 1.39rem;
+	 		top: 0;
+	 		left: 33.4%;
+	 		width: 66.8%;
+	 		font-size: .8rem;
+	 		display: flex;
+	 		justify-content: space-between;
+
+	 		p{
+	 			display: inline-block;
+	 		}
+
+    	}//
+
+	 	.logo-block{
+	 		top: 0rem;
+	 		left: 0;
+	 		width: 33.3333333%;
+	 	}
+
+	 	.mandarinart-menu{
+
+	 		top: 3rem;
+	 		left: 0;
+	 		width: 100%;
+			font-size: .9rem;
+
+			& li{
+
+				padding-top: 0;
+
+				
+				list-style-type: none;
+				position: relative;
+
+				&:hover:after {
+					position: absolute;
+					top: 1.2rem;
+					left: 0;
+					content: " ";
+					width: 100%;
+					height: .2rem;
+					background-color: $menu-hover;
+				}
+
+				a {
+					color: inherit;
+
+					&:hover{
+						text-decoration: none;
+					}
+				}
+			}
+		}
+    }
+
+
+	@media (min-width: $break-point-lg){
+
+    	height: 7rem;
+
+    	.slogan-block{
+
+			display: block;
+	 		top: 2.7rem;
+	 		left: 66.8%;
+	 		width: 33.2%;
+	 		height: 4rem;
+
+	 		&:before{
+				content: "\00ab";
+				position: absolute;
+				font-size: 1.8rem;
+				bottom: 1rem;
+			}
+			
+			p{
+				position: absolute;
+				bottom: 0;
+				margin: 0;
+				padding-bottom: .35rem;
+				padding-left: 1.1rem;
+				font-size: .8rem;
+
+
+			}
+    	}
+
+    	.info-block{
+    		padding-top: .8rem;
+	 		top: 0;
+	 		left: 0;
+	 		width: 33.3333333%;
+		
+	 		font-size: .9rem;
+	 		display: block;
+
+	 		p{
+	 			display: block;
+	 			margin: 0;
+	 		}
+
+		}
+
+	 	.logo-block{
+	 		top: 3rem;
+	 		left: 33.4%;
+	 		width: 33.3333333%;
+	 	}
+
+
+
+	 	.mandarinart-menu{
+
+	 		top: 0;
+	 		left: 33.4%;
+	 		width: 66.55%;
+			font-size: .95rem;
+
+
+			& li{
+
+				padding-top: 1rem;
+
+				
+				list-style-type: none;
+				position: relative;
+
+				&:hover:after {
+					position: absolute;
+					top: 2.1rem;
+					left: 0;
+					content: " ";
+					width: 100%;
+					height: .2rem;
+					background-color: $menu-hover;
+				}
+
+				a {
+					color: inherit;
+
+					&:hover{
+						text-decoration: none;
+					}
+				}
+			}
+		}
+
+
+	 	.mandarinart-menu{
+
+
+
+	 	}
+
+
+
+    }
+
+
+    @media (min-width: $break-point-xl){
+
+    	height: 7rem;
+    	.slogan-block{
+
+			display: block;
+	 		top: 2.8rem;
+	 		left: 66.8%;
+	 		width: 33.2%;
+	 		height: 4rem;
+
+	 		&:before{
+				content: "\00ab";
+				position: absolute;
+				font-size: 2rem;
+				bottom: 1rem;
+			}
+			
+			p{
+				position: absolute;
+				bottom: 0;
+				margin: 0;
+				padding-bottom: .35rem;
+				padding-left: 1.1rem;
+				font-size: .9rem;
+
+
+			}
+    	}
+
+    	.info-block{
+    		padding-top: .7rem;
+	 		top: 0;
+	 		left: 0;
+	 		width: 33.3333333%;
+
+    	}
+
+	 	.logo-block{
+	 		top: 2.8rem;
+	 		left: 33.4%;
+	 		width: 33.3333333%;
+	 	}
+
+	 	.mandarinart-menu{
+
+	 		top: 0;
+	 		left: 33.4%;
+	 		width: 66.55%;
+
+	 	}
+    }
+}
+
+
+
 
 ul.mandarinart-menu{ 
 
+	text-transform: uppercase;
 	width: 100%;
-
 	display: flex;
-
 	justify-content: space-between;
-	// justify-content: center;
-
-	height: 100%;
-
 	padding: 0;	
-
 	margin: 0;
 
-	li:hover {
-
-		color: white;
-		background-color: red;
-	}
+	
 
 	li {
-		padding: 1rem;
+		padding-top: .8rem;
 		list-style-type: none;
+		position: relative;
+
+		&:hover:after {
+			position: absolute;
+			top: 2rem;
+			left: 0;
+			content: " ";
+			width: 100%;
+			height: .2rem;
+			background-color: $menu-hover;
+		}
+
+		a {
+			color: inherit;
+
+			&:hover{
+				text-decoration: none;
+			}
+		}
+		
 	}
+
+
 }
 
 #slick1, #slick2 {
