--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,15 @@
 }
 
 
+#display{
+
+	position: fixed;
+	width: 100%;
+	z-index: 10000;
+	top: 300px;
+}
+
+
 * {
 	//outline: 1px solid red;
 	font-family: 'Roboto', sans-serif;
@@ -32,7 +41,25 @@ $break-point-xl : 1200px;
 
 $menu-hover : red;
 
-.header-wrapper{
+// .header-wrapper{
+
+// 	background-color: black;
+// 	position: relative;
+// 	top: 0;
+// 	left: 0;
+// 	width: 100%;
+// 	z-index: 10000;
+// }
+
+
+	// body{
+	// 			overflow: hidden;
+	// }
+
+
+
+ header.header {
+
 
 	background-color: black;
 	position: relative;
@@ -40,29 +67,13 @@ $menu-hover : red;
 	left: 0;
 	width: 100%;
 	z-index: 10000;
-}
-
-
-
-
-
-
-
-
-@media (max-width: $break-point-md - 1){
-
-	.container{
-
-		width: 100%;
-		max-width: 100%;
-	}
-}
-
-
- header.header {
-
-	background-color: black;
 	position: relative;
+ }
+
+ .menu.container,
+ .logo-info-slogan.container{
+
+ 	position: relative;
  }
 
 
